# exo

./: .gitignore  README.md  config.py  event_bus.py  lstm.ipynb  main.py  models.py  nixpacks.toml  package.json  preprocessing.ipynb  pyproject.toml  railway.toml  requirements.txt  scheduler.py
api/: app.py
api/data/: trade_flows.json
api/routes/: admin.py  countries.py  risk.py  signals.py  trade.py
ingestion/: eia.py  finnhub.py  gdelt.py  kalshi.py  polymarket.py  ucdp.py  unga_votes.py  wits.py  world_bank.py
risk_index/: dimensions.py  engine.py
scripts/: export_data.sh  seed_ucdp_bulk.py  seed_wgi.py
src/exo/: __init__.py  config.py  models.py  observability.py  scheduler.py
src/exo/ingestion/: base.py  eia.py  fred.py  gdelt.py  google_trends.py  kalshi.py  ofac.py  unga_votes.py  wits.py  world_bank.py
src/exo/risk_index/: dimensions.py  engine.py  validation.py
src/exo/store/: feature_store.py  index_store.py
store/: feature_store.py  index_store.py
tests/integration/: test_dimensions.py  test_feature_store.py  test_risk_index.py
tests/unit/: test_ingestors.py  test_schema.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css
ui/src/components/: CountrySelector.jsx  Globe.jsx  RiskCard.jsx  ScoreBar.jsx  ShowcaseCard.jsx  SignalFeed.jsx  TradePanel.jsx
ui/src/data/: showcaseData.js
ui/src/lib/: api.js  riskColor.js
