[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "cryptography>=42",
    "gdeltdoc>=1.4",
    "fredapi>=0.5",
    "pytrends>=4.9",
    "praw>=7.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "duckdb>=1.0",
    "pyarrow>=15",
    "redis>=5.0",
    "apscheduler>=3.10",
    "structlog>=24",
    "transformers>=4.40",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["exo*"]
